up to v2024.09.27 rev48254

--- a/cfg/org.jdownloader.api.RemoteAPIConfig.json
+++ b/cfg/org.jdownloader.api.RemoteAPIConfig.json
@@ -1,1 +1,1 @@
-{"deprecatedapienabled":false,"jdanywhereapienabled":false}
+{"headlessmyjdownloadermandatory":true,"deprecatedapienabled":false,"jdanywhereapienabled":false}
